# maxwell

./: .gitignore  AGENTS.md  CHANGELOG.md  KDESTOREPAGE.md  MEMORY_ANALYSIS.md  README.md  TODO  build.sh  metadata.json
contents/config/: config.qml  main.xml
contents/ui/: CustomMeshLoader.qml  MaxwellWidget.qml  main.qml  view3d.qml
contents/ui/assets/mesh/: MaxwellMesh.qml
contents/ui/assets/mesh/meshes/: dingus_dingus_0_mesh.mesh  dingus_whiskers_0_mesh.mesh
contents/ui/config/: General.qml
tests/: CMakeLists.txt  MockPlasmoid.qml  README.md  run_tests.sh  tst_main.qml
tools/: README.md  grab_screenshot.qml  measure_memory.qml  measure_memory.sh  measure_memory_bare.qml
